--- a/src/app/modules/auth/login/login.component.html
+++ b/src/app/modules/auth/login/login.component.html
@@ -2,26 +2,18 @@
 <div class="login-form login-signin">
   <!--begin::Form-->
   <form
+  [formGroup]="loginForm"
+   (ngSubmit)="loginUser()"
     class="form"
-    [formGroup]="loginForm"
     novalidate="novalidate"
     id="kt_login_signin_form"
-    (ngSubmit)="submit()"
+   
   >
     <!--begin::Title-->
     <div class="pb-13 pt-lg-0 pt-5">
       <h3 class="font-weight-bolder text-dark font-size-h4 font-size-h1-lg">
-        Welcome to Text Mixer
+        Eclectics MB Services
       </h3>
-      <!-- <span class="text-muted font-weight-bold font-size-h4"
-        >New Here?
-        <a
-          routerLink="/auth/registration"
-          id="kt_login_signup"
-          class="text-primary font-weight-bolder"
-          >{{ "AUTH.GENERAL.SIGNUP_BUTTON" | translate }}</a
-        >
-      </span> -->
     </div>
     <!--end::Title-->
 
@@ -39,56 +31,58 @@
     <!-- end::Alert error-->
 
     <!--begin::Form group-->
-    <div class="form-group">
-      <label class="font-size-h6 font-weight-bolder text-dark">Email</label>
+    <div class="form-group"
+     [class.error]="
+    loginForm.controls['username'].dirty &&
+    loginForm.hasError('required', 'email')
+  ">
+      <label class="font-size-h6 font-weight-bolder text-dark">Username</label>
       <input
         class="form-control form-control-solid h-auto py-7 px-6 rounded-lg"
-        type="email"
-        name="email"
-        formControlName="email"
+        type="text"
+        name="name"
+        formControlName="username"
         autocomplete="off"
-        [ngClass]="{ 'is-invalid': loginForm.controls['email'].invalid }"
+        required="required"
       />
       <ng-container
         [ngTemplateOutlet]="formError"
         [ngTemplateOutletContext]="{
           validation: 'required',
-          message: 'Email is required',
-          control: loginForm.controls['email']
+          message: 'Username is required',
+          control: loginForm.controls['username']
         }"
-      ></ng-container>      
-      <ng-container
-        [ngTemplateOutlet]="formError"
-        [ngTemplateOutletContext]="{
-          validation: 'email',
-          message: 'Email is invalid',
-          control: loginForm.controls['email']
-        }"
-      ></ng-container>
+      ></ng-container>    
+
       <ng-container
         [ngTemplateOutlet]="formError"
         [ngTemplateOutletContext]="{
           validation: 'minLength',
-          message: 'Email should have at least 3 symbols',
-          control: loginForm.controls['email']
+          message: 'Minimum is 3 digit',
+          control: loginForm.controls['username']
         }"
       ></ng-container>
+    
       <ng-container
         [ngTemplateOutlet]="formError"
         [ngTemplateOutletContext]="{
           validation: 'maxLength',
-          message: 'Email should have maximum 360 symbols',
-          control: loginForm.controls['email']
+          message: 'username should have maximum 360 symbols',
+          control: loginForm.controls['username']
         }"
       ></ng-container>
     </div>
     <!--end::Form group-->
 
     <!--begin::Form group-->
-    <div class="form-group">
+    <div class="form-group"
+      [class.error]="
+    loginForm.controls['pin'].dirty &&
+    loginForm.hasError('required', 'pin')
+  ">
       <div class="d-flex justify-content-between mt-n5">
         <label class="font-size-h6 font-weight-bolder text-dark pt-5"
-          >Password</label
+          >Pin</label
         >
         <a
           routerLink="/auth/forgot-password"
@@ -104,31 +98,31 @@
         type="password"
         name="password"
         autocomplete="off"
-        formControlName="password"
-        [ngClass]="{ 'is-invalid': loginForm.controls['password'].invalid }"
+        formControlName="pin"
+        required
       />
       <ng-container
         [ngTemplateOutlet]="formError"
         [ngTemplateOutletContext]="{
           validation: 'required',
-          message: 'Password is required',
-          control: loginForm.controls['password']
+          message: 'Pin is required',
+          control: loginForm.controls['pin']
         }"
       ></ng-container>
       <ng-container
         [ngTemplateOutlet]="formError"
         [ngTemplateOutletContext]="{
           validation: 'minlength',
-          message: 'Password should have at least 3 symbols',
-          control: loginForm.controls['password']
+          message: 'pin should be 4 symbols',
+          control: loginForm.controls['pin']
         }"
       ></ng-container>
       <ng-container
         [ngTemplateOutlet]="formError"
         [ngTemplateOutletContext]="{
           validation: 'maxLength',
-          message: 'Password should have maximum 100 symbols',
-          control: loginForm.controls['password']
+          message: 'Pin should have maximum 4 digit',
+          control: loginForm.controls['pin']
         }"
       ></ng-container>
     </div>
@@ -139,25 +133,10 @@
       <button
         type="submit"
         id="kt_login_signin_submit"
-        class="btn btn-login font-weight-bolder font-size-h6 px-8 py-4 my-3 mr-3"
-        [disabled]="loginForm.invalid"
+        class="btn  btn-login font-weight-bolder font-size-h6 px-8 py-4 my-3 mr-3"
       >
         Sign In 
       </button>
-
-      <!-- <button
-        type="button"
-        class="btn btn-light-primary font-weight-bolder px-8 py-4 my-3 font-size-lg"
-      >
-        <span class="svg-icon svg-icon-md">
-          <img src="./assets/media/svg/social-icons/google.svg" />
-        </span>
-        Sign in with Google
-      </button> -->
-
-      <!-- <ng-container *ngIf="isLoading$ | async">
-        <span class="spinner spinner-primary ml-5"></span>
-      </ng-container> -->
     </div>
     <!--end::Action-->
   </form>
