--- a/src/app/pages/_layout/components/header/header-menu/header-menu.component.html
+++ b/src/app/pages/_layout/components/header/header-menu/header-menu.component.html
@@ -14,7 +14,7 @@
   <!-- begin::1 Level -->
   <li class="menu-item menu-item-rel" routerLinkActive="menu-item-active">
     <a class="menu-link" routerLink="/mixer/text-mixer" routerLinkActive="active">
-      <span class="menu-text">Text Mixer</span>
+      <span class="menu-text">ECLECTICS MB</span>
       <ng-container *ngIf="rootArrowEnabled">
         <i class="menu-arrow"></i>
       </ng-container>
